Removing Python Comaprison

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ Thumbs.db
 # App generated files #
 #######################
 .idea
+
+# Random Files & Folders #
+##########################
+Python\ Comparison/
